# python-microservice-flavours

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  migration.Dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_08_09_2114-fd0b55b207fb_create_articles_table.py
articles-program-gererated-ids/: Makefile  README.md
articles-program-gererated-ids/alembic/versions/: 2023_08_09_2114-fd0b55b207fb_create_articles_table.py
articles-program-gererated-ids/docker/: app.Dockerfile
articles-program-gererated-ids/src/: main.py  settings.py
articles-program-gererated-ids/src/adapters/: __init__.py  articles_repository.py
articles-program-gererated-ids/src/api/: api.py
articles-program-gererated-ids/src/api/endpoints/: articles.py
articles-program-gererated-ids/src/domain/: commands.py  schemata.py
articles-program-gererated-ids/src/services/: __init__.py
articles-program-gererated-ids/src/services/handlers/: command_handlers.py  event_handlers.py
articles-program-gererated-ids/src/views/: articles.py
articles-program-gererated-ids/tests/: conftest.py
articles-program-gererated-ids/tests/e2e/: test_articles_delete.py  test_articles_patch.py
articles-program-gererated-ids/tests/integration/: test_mappers.py
articles-program-gererated-ids/tests/unit/: conftest.py  test_articles_views.py  test_commands.py  test_containers_wiring.py  test_handlers.py  test_main.py  test_message_bus.py  test_model.py  test_settings.py
docker/: app.Dockerfile  migration.Dockerfile  runtime.Dockerfile
docs/: api.md  architecture.dsl
flashcards-selenium/: .pre-commit-config.yaml  README.md  pyproject.toml
flashcards-selenium/docs/: possible_improvements.md
online-publishing-platform/articles/: Makefile  README.md  api.md  docker-compose.yml  pyproject.toml
online-publishing-platform/articles/alembic/versions/: 2023_08_09_2114-fd0b55b207fb_create_articles_table.py
online-publishing-platform/articles/docs/: api.md
online-publishing-platform/articles/src/: main.py
online-publishing-platform/articles/src/adapters/: article_repository.py  articles_repository.py  orm.py
online-publishing-platform/articles/src/api/endpoints/: __init__.py  articles.py
online-publishing-platform/articles/src/containers/: http_client.py
online-publishing-platform/articles/src/domain/: __init__.py  events.py  exceptions.py  model.py
online-publishing-platform/articles/src/routines/: __init__.py  mappers.py
online-publishing-platform/articles/src/services/: __init__.py  database_engine.py  message_bus.py  unit_of_work.py
online-publishing-platform/articles/src/services/handlers/: command_handlers.py
online-publishing-platform/articles/src/views/: articles.py
online-publishing-platform/articles/tests/: conftest.py
online-publishing-platform/articles/tests/e2e/: conftest.py
online-publishing-platform/articles/tests/unit/: conftest.py  test_commands.py  test_containers_wiring.py  test_main.py  test_message_bus.py  test_model.py  test_schemata.py  test_views.py
src/: main.py  settings.py
src/adapters/: articles_repository.py  orm.py
src/api/: api.py  probes.py
src/api/endpoints/: articles.py
src/containers/: wiring.py
src/domain/: commands.py  exceptions.py  model.py  schemata.py
src/routines/: mappers.py
src/services/: http_client.py  message_bus.py  unit_of_work.py
src/services/handlers/: command_handlers.py
src/views/: articles.py
tests/: conftest.py
tests/e2e/: conftest.py  test_articles.py  test_articles_delete.py  test_articles_get.py  test_articles_patch.py  test_articles_post.py  test_http_client.py  test_probes.py
tests/integration/: conftest.py  test_article_repository.py  test_article_repository_create.py  test_article_repository_delete.py  test_article_repository_read.py  test_article_repository_update.py  test_articles_views.py  test_mappers.py  test_unit_of_work.py
tests/unit/: conftest.py  test_articles_views.py  test_commands.py  test_containers_wiring.py  test_handlers.py  test_message_bus.py  test_model.py  test_schemata.py  test_session_factory.py  test_views.py
